--- a/extension/style/styles.css
+++ b/extension/style/styles.css
@@ -56,7 +56,7 @@ textarea::-webkit-input-placeholder {
 	overflow: hidden;
 }
 
-.table thead tr + th, .table tbody tr + td {
+tr>th:first-of-type, tr>td:first-of-type  {
 	max-width: 100px;
 	text-overflow: ellipsis;
 	white-space: nowrap;
