--- a/src/app/app.html
+++ b/src/app/app.html
@@ -4,8 +4,7 @@
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 	<title>Easy URL Params</title>
 	<meta name="author" content="Samuel Selvanathan">
-	<link rel="stylesheet" type="text/css" href="lib/bootstrap-combined.min.css">
-	<link rel="stylesheet" type="text/css" href="app.css">
+	<link rel="stylesheet" type="text/css" href="../build/main.css">
 </head>
 <body>
 	<h5>Easy URL Params</h5>
@@ -31,7 +30,5 @@
 	    </div>
     </div>
 </body>
-<script src="lib/jquery-1.9.0.js"></script>
-<script src="lib/bootstrap.min.js"></script>
-<script src="app.js"></script>
+<script src="../build/main.js"></script>
 </html>
